# emby-posters-updater

./: .gitignore  CHANGELOG.md  README.md  emby-poster-updater.py  setup.cfg
.github/workflows/: ci.yml
