[metadata]
name = emby-posters-updater
version = 1.0.0
description = Emby 封面更新工具（合集/流派/标签）- 纯API、支持交互与自动化
long_description = file: README.md
long_description_content_type = text/markdown
author = Open Source Contributors
license = MIT

[options]
python_requires = >=3.8
install_requires =
    requests
scripts =
    update_collection_posters_extended_sanitized.py
include_package_data = True
